# inferex

./: .env.example  .gitignore  AGENT.MD  Dockerfile  Dockerfile.vllm  README.md  docker-compose.yml  patch_vllm.py  pyproject.toml
.claude/: CLAUDE.md 
benchmarks/: prompts.py  runner.py  runner_engine_compare.py
docs/: ARCHITECTURE.md
gateway/: auth.py  config.py  logging_config.py  main.py  rate_limiter.py
k8s/: gateway-deployment.yaml  gpu-resource-limits.yaml  hpa.yaml  namespace.yaml  services.yaml  vllm-deployment.yaml
observability/: prometheus.yml
observability/grafana/dashboards/: inferex.json
observability/grafana/provisioning/dashboards/: inferex.yaml
quantisation/: calibration_prompts.py  quantise_awq.py  quantise_gptq.py
