[project]
name = "inferex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.0",
    "fastapi>=0.136.3",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
]
