[project]
name = "inferex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.0",
    "fastapi>=0.136.3",
    "huggingface-hub>=1.16.1",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
    "vllm>=0.21.0",
    "autoawq>=0.2.9",
    "optimum[auto-gptq]>=2.1.0",
    "datasets>=4.8.5",
    "matplotlib>=3.11.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]
